--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,11 @@
 use_frameworks!
 
+platform :ios, '8.0'
+
 target 'ProtocolOrientedNetworking_Example' do
   pod 'ProtocolOrientedNetworking', :path => '../'
 
   target 'ProtocolOrientedNetworking_Tests' do
     inherit! :search_paths
-
-    
   end
 end
