--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+# https://github.com/github/gitignore/ gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
 # OS X
 .DS_Store
 
-# Xcode
+## Build generated
+
 build/
+DerivedData
+
+## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -11,27 +17,51 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+
+## User Settings
+project.xcworkspace/
 xcuserdata/
-*.xccheckout
-profile
+
+## Other
 *.moved-aside
-DerivedData
+*.xcuserstate
+*.hmap
+*.xccheckout
+
+## Obj-C/Swift specific
 *.hmap
 *.ipa
+*.dSYM.zip
+*.dSYM
+
+## AppCode metadata
+.idea/
+
+## Merge tool backups ##
+*.orig
+
+
+## CocoaPods
+Pods
 
 # Bundler
 .bundle
 
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
-
 Carthage/Build
 
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-# 
-# Note: if you ignore the Pods directory, make sure to uncomment
-# `pod install` in .travis.yml
+# Ignore Crashlytics / Fabric
+Crashlytics.framework/
+Fabric.framework/
+
+## fastlane
 #
-# Pods/
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
